@@ -1,6 +1,9 @@
 New in spot 2.6.0.dev  (not yet released)
 
-  Nothing yet.
+  Command-line tools:
+
+  - "ltlfilt --suspendable" is now a synonym for
+    "ltlfilt --universal --eventual".
 
 New in spot 2.6  (2018-07-04)
 
